--- a/Project/Client/Views/Product/Product.cshtml
+++ b/Project/Client/Views/Product/Product.cshtml
@@ -103,6 +103,7 @@
                         <option value="descLike" class="sort-option">Like Descending</option>
                         <option value="ascSold" class="sort-option">Purchase Count Ascending</option>
                         <option value="descSold" class="sort-option">Purchase Count Descending</option>
+                        <option value="free" class="sort-option">Free</option>
                     </select>
                     <button type="submit" class="btn btn-primary sort-btn">
                         Sort
@@ -111,21 +112,83 @@
 
                 <!-- Phần Bản ghi và Nút Free nằm cùng một hàng và sát bên phải -->
                 <div class="d-flex align-items-center justify-content-end col-md-5 ms-auto">
-                    <!-- Bản ghi -->
-                    <form method="get" asp-controller="Product" asp-action="Product" class="col-md-2 col-4 d-inline ms-2 mb-2">
-                        <div class="dropdown">
-                            <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa-regular fa-rectangle-list"></i>
-                            </a>
-                            <ul class="dropdown-menu p-0">
-                                <li><button class="dropdown-item" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='3'; this.form.submit()">3 records per page</button></li>
-                                <li><button class="dropdown-item" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='5'; this.form.submit()">5 records per page</button></li>
-                                <li><button class="dropdown-item" type="button" onclick="document.querySelector('[name=\'pageSize\']').value='10'; this.form.submit()">10 records per page</button></li>
-                            </ul>
-                            <input type="hidden" name="pageSize" value="" />
-                            <input type="hidden" name="page" value="1" />
-                        </div>
-                    </form>
+                    @* @if (ViewData["Parameters"] != null)
+                    {
+                        @if (ViewData["Parameters"] is Dictionary<string, object> routeParams)
+                        {
+
+                            <!-- Bản ghi -->
+                            <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" class="col-md-2 col-4 d-inline ms-2 mb-2">
+                                <div class="dropdown">
+                                    <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="fa-regular fa-rectangle-list"></i>
+                                    </a>
+                                    <ul class="dropdown-menu p-0">
+                                        <li>
+                                            <select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+                                                <option>Select records per page</option>
+                                                <option value="3">3 records per page</option>
+                                                <option value="5">5 records per page</option>
+                                                <option value="10">10 records per page</option>
+                                            </select>
+                                        </li>
+                                    </ul>
+                                    <input type="hidden" name="page" value="1" />
+                                    @foreach (var param in routeParams)
+                                    {
+                                        <input name="@param.Key" value="@param.Value" style="display:none" />
+                                    }
+                                </div>
+                            </form>
+                        }
+                        else
+                        {
+                            <!-- Bản ghi -->
+                            <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" class="col-md-2 col-4 d-inline ms-2 mb-2">
+                                <div class="dropdown">
+                                    <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <i class="fa-regular fa-rectangle-list"></i>
+                                    </a>
+                                    <ul class="dropdown-menu p-0">
+                                        <li>
+                                            <select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+                                                <option>Select records per page</option>
+                                                <option value="3">3 records per page</option>
+                                                <option value="5">5 records per page</option>
+                                                <option value="10">10 records per page</option>
+                                            </select>
+                                        </li>
+                                    </ul>
+                                    <input type="hidden" name="page" value="1" />
+                                    <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" />
+                                </div>
+                            </form>
+                        }
+
+                    }
+                    else
+                    {
+                        <!-- Bản ghi -->
+                        <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" class="col-md-2 col-4 d-inline ms-2 mb-2">
+                            <div class="dropdown">
+                                <a href="#" type="button" class="d-flex align-items-center justify-content-around dropdown-toggle text-white" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-regular fa-rectangle-list"></i>
+                                </a>
+                                <ul class="dropdown-menu p-0">
+                                    <li>
+                                        <select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+                                            <option>Select records per page</option>
+                                            <option value="3">3 records per page</option>
+                                            <option value="5">5 records per page</option>
+                                            <option value="10">10 records per page</option>
+                                        </select>
+                                    </li>
+                                </ul>                               
+                                <input type="hidden" name="page" value="1" />
+                            </div>
+                        </form>
+                    } *@
+
 
                     <!-- Nút Free -->
                 </div>
@@ -275,27 +338,173 @@
 
 
     <div>
+        @if (ViewData["Parameters"] != null)
+        {
+            @if (ViewData["Parameters"] is Dictionary<string, object> routeParams)
+            {
+                <form asp-controller="Admin" asp-action="@ViewData["CurrentAction"]" class="d-inline">
+                    @foreach (var param in routeParams)
+                    {
+                        <input name="@param.Key" value="@param.Value" style="display:none" />
+                    }
+                    <select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+                        <option>Select records per page</option>
+                        <option value="3">3 records per page</option>
+                        <option value="5">5 records per page</option>
+                        <option value="10">10 records per page</option>
+                    </select>
+                    <input type="hidden" name="page" value="1" />
+                </form>
+
+            }
+            else
+            {
+                <form asp-controller="Admin" asp-action="@ViewData["CurrentAction"]" class="d-inline">
+                    <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" />
+                    <select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+                        <option>Select records per page</option>
+                        <option value="3">3 records per page</option>
+                        <option value="5">5 records per page</option>
+                        <option value="10">10 records per page</option>
+                    </select>
+                    <input type="hidden" name="page" value="1" />
+                </form>
+            }
+
+        }
+        else
+        {
+            <form method="get" asp-controller="Admin" asp-action="@ViewData["CurrentAction"]" class="d-inline">
+                <select name="pageSize" class="form-select form-select-sm w-auto d-inline-block" onchange="this.form.submit()">
+                    <option>Select records per page</option>
+                    <option value="3">3 records per page</option>
+                    <option value="5">5 records per page</option>
+                    <option value="10">10 records per page</option>
+                </select>
+                <input type="hidden" name="page" value="1" />
+            </form>
+        }
         <nav aria-label="Page navigation example" class="d-inline-block">
             <ul class="pagination pagination-sm mb-0">
-                <!-- Previous Button -->
                 <li class="page-item @(Model.pageNumber == 1 ? "disabled" : "")">
-                    <a class="page-link sci-fi-btn" asp-controller="Product" asp-action="Product" asp-route-page="@(Model.pageNumber - 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
-                        Previous
-                    </a>
+                    @if (ViewData["Parameters"] != null)
+                    {
+                        @* <a class="page-link" asp-controller="Admin" asp-route-@param.Key="@(param.Value)" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber - 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                    Previous
+                    </a> *@
+                        @if (ViewData["Parameters"] is Dictionary<string, object> routeParams)
+                        {
+                            <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber - 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                @* <option value="@ViewData["Parameters"]" style="display:none;" selected></option> *@
+                                @* <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" /> *@
+                                @foreach (var param in routeParams)
+                                {
+                                    <input name="@param.Key" value="@param.Value" style="display:none" />
+                                }
+                                <button type="submit" class="page-link">
+                                    Previous
+                                </button>
+                            </form>
+                        }
+                        else
+                        {
+                            <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber - 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                @* <option value="@ViewData["Parameters"]" style="display:none;" selected></option> *@
+                                <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" />
+
+                                <button type="submit" class="page-link">
+                                    Previous
+                                </button>
+                            </form>
+                        }
+                    }
+                    else
+                    {
+                        <a class="page-link" asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber - 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                            Previous
+                        </a>
+                    }
                 </li>
                 @for (var pg = 1; pg <= Model.pageCount; pg++)
                 {
                     <li class="page-item @(pg == Model.pageNumber ? "active" : "")">
-                        <a class="page-link sci-fi-btn" asp-controller="Product" asp-action="Product" asp-route-page="@pg" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
-                            @pg
-                        </a>
+
+                        @if (ViewData["Parameters"] != null)
+                        {
+                            @* foreach (var param in routeParams2)
+                    {
+                    <a class="page-link" asp-controller="Admin" asp-route-@param.Key="@(param.Value)" asp-action="@ViewData["CurrentAction"]" asp-route-page="@pg" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                    @pg
+                    </a>
+                    } *@
+                            @if (ViewData["Parameters"] is Dictionary<string, object> routeParams)
+                            {
+                                <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@pg" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                    @*  <option value="@ViewData["Parameters"]" style="display:none;" selected></option> *@
+                                    @* <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" /> *@
+                                    @foreach (var param in routeParams)
+                                    {
+                                        <input name="@param.Key" value="@param.Value" style="display:none" />
+                                    }
+                                    <button type="submit" class="page-link">
+                                        @pg
+                                    </button>
+                                </form>
+                            }
+                            else
+                            {
+                                <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@pg" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                    @*  <option value="@ViewData["Parameters"]" style="display:none;" selected></option> *@
+                                    <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" />
+                                    <button type="submit" class="page-link">
+                                        @pg
+                                    </button>
+                                </form>
+                            }
+                        }
+                        else
+                        {
+                            <a class="page-link" asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@pg" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                @pg
+                            </a>
+                        }
                     </li>
                 }
-                <!-- Next Button -->
                 <li class="page-item @(Model.pageNumber == Model.pageCount ? "disabled" : "")">
-                    <a class="page-link sci-fi-btn" asp-controller="Product" asp-action="Product" asp-route-page="@(Model.pageNumber + 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
-                        Next
-                    </a>
+
+                    @if (ViewData["Parameters"] != null)
+                    {
+                        @if (ViewData["Parameters"] is Dictionary<string, object> routeParams)
+                        {
+                            <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber + 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                @* <option value="@ViewData["Parameters"]" style="display:none;" selected></option> *@
+                                @foreach (var param in routeParams)
+                                {
+                                    <input name="@param.Key" value="@param.Value" style="display:none" />
+                                }
+                                <button type="submit" class="page-link">
+                                    Next
+                                </button>
+                            </form>
+                        }
+                        else
+                        {
+                            <form asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber + 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                                @* <option value="@ViewData["Parameters"]" style="display:none;" selected></option> *@
+                                <input name="@ViewData["NamePara"]" value="@ViewData["Parameters"]" style="display:none" />
+                                <button type="submit" class="page-link">
+                                    Next
+                                </button>
+                            </form>
+                        }
+
+                    }
+                    else
+                    {
+                        <a class="page-link" asp-controller="Product" asp-action="@ViewData["CurrentAction"]" asp-route-page="@(Model.pageNumber + 1)" asp-route-pageSize="@(ViewContext.HttpContext.Request.Query["pageSize"])">
+                            Next
+                        </a>
+                    }
                 </li>
             </ul>
         </nav>
