--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                 </a>
                             </div>
                             <div class="mx-3">
-                                <form asp-action="SearchProduct" asp-controller="Home" method="post">
+                                <form asp-action="SearchProduct" asp-controller="Product" method="post">
                                     
                                     <input class="form-control me-2" type="text" placeholder="Search.." aria-label="Search" name="searchString">
                                 </form>
@@ -183,7 +183,7 @@
             <!-- Chatbox -->
             <div id="chatContainer">
                 <div id="chatHeader">
-                    Pixels Support
+                    G4T Support
                     <button id="closeChat">×</button>
                 </div>
                 <div id="chatContent">
