fix login, update user

--- a/Project/Client/Views/User/Information.cshtml
+++ b/Project/Client/Views/User/Information.cshtml
@@ -96,6 +96,8 @@
                     <div class="col-md-8">
                         <!-- Bắt đầu form -->
                         <input type="hidden" name="Id" asp-for="@Model.Id" />
+                        <input type="hidden" name="EmailConfirmation" asp-for="@Model.EmailConfirmation" />
+                        <input type="hidden" name="Status" asp-for="@Model.Status" />
                         <div class="row mb-3 px-3">
                             <div class="col-md-3 align-content-center">
                                 <div class="text-center fw-bold">
