--- a/Project/Client/Views/User/PasswordSecurity.cshtml
+++ b/Project/Client/Views/User/PasswordSecurity.cshtml
@@ -51,9 +51,9 @@
                     </a>
                 </div>
                 <div class="custom-nav-item">
-                    <a asp-controller="User" asp-action="UserDashboard">
+                    <a asp-controller="Order" asp-action="History">
                         <button type="button">
-                            <i class="fas fa-heart"></i> User Dashboard
+                            <i class="fas fa-heart"></i> History Order
                         </button>
                     </a>
                 </div>
