--- a/Project/Client/Views/Shared/_LayoutAdmin.cshtml
+++ b/Project/Client/Views/Shared/_LayoutAdmin.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -52,17 +53,21 @@
                     <li class="nav-item mx-2">
                         <a class="nav-link"><i class="fa-solid fa-bars"></i></a>
                     </li> *@
-                    @if (ViewBag.User != null)
+                    @if (User.Identity.IsAuthenticated)
                     {
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" asp-controller="User" asp-action="Information"><img src="@ViewBag.User.Avatar" alt="Profile" class="rounded-circle" width="30"></a>
-                        </li>
+                        var displayName = User.FindFirst(ClaimTypes.GivenName)?.Value;
+                        var avatarUrl = User.FindFirst("Avatar")?.Value;
+                        <a class="nav-link d-flex" asp-controller="User" asp-action="Information">
+                            <img id="avatar" src="@avatarUrl" alt="Profile" class="rounded-circle" width="30" height="30">
+                            <span class="align-content-center px-1 text-truncate" style="max-width: 150px;">@displayName</span>
+                        </a>
                     }
                     else
                     {
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" asp-controller="User" asp-action="Information"><img src="~/Image/avatar.jpeg" alt="Profile" class="rounded-circle" width="30"></a>
-                        </li>
+                        <a class="nav-link d-flex" asp-controller="User" asp-action="Login">
+                            <img src="~/Image/avatar.jpeg" alt="Profile" class="rounded-circle" width="30" height="30">
+                            <span class="align-content-center px-1">Account</span>
+                        </a>
                     }
                    
                 </ul>
